Correção de alguns erros no relatório

--- a/RelatorioEXP1.tex
+++ b/RelatorioEXP1.tex
@@ -70,11 +70,11 @@
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Author:}\\
-Bruno Vicente \textsc{Kitaka}
 Bruno Camilo \textsc{Silvério}
 Guilherme \textsc{Pernicone}
 João Pedro \textsc{Porta}
 Marcelo Dib \textsc{Coutinho}
+Pedro Pierina \textsc{Pierina}
 \end{flushleft}
 \end{minipage}
 ~
@@ -120,7 +120,7 @@ Nesse experimento, utilizando Ubuntu 16.04, foi criado um módulo que tem como o
 
 \subsection{Progama de usuário em C}
 
-O programa em C possue um menu em que o usuário tem a opção de, encriptar uma string, encriptar escrevendo os bytes em hexadecimal, e decriptando utilizando utilizando tambem os valores dos bytes em hexadecimal, o programa então faz as escrita no módulo /dev/cryptomodule, inserindo no primeiro byte da string uma letra equivalente a operação a ser realizada, para então poder ler do mesmo módulo. O programa, também, se selecionado para encriptar um string comum, faz a conversão de uma string para um string com os valores originais representados em hexadecimal.
+O programa em C possue um menu em que o usuário tem a opção de, encriptar uma string, encriptar escrevendo os bytes em hexadecimal, e decriptando utilizando tambem os valores dos bytes em hexadecimal, o programa então faz as escrita no módulo /dev/cryptomodule, inserindo no primeiro byte da string uma letra equivalente a operação a ser realizada, para então poder ler do mesmo módulo. O programa, também, se selecionado para encriptar um string comum, faz a conversão de uma string para um string com os valores originais representados em hexadecimal.
 
 \subsection{Módulo}
 
