--- a/RelatorioEXP1.tex
+++ b/RelatorioEXP1.tex
@@ -51,7 +51,7 @@
 %	HEADING SECTIONS
 %----------------------------------------------------------------------------------------
 
-\textsc{\LARGE Pontifícia Universidade Católica Campinas}\\[1.5cm] % Name of your university/college
+\textsc{\LARGE Pontifícia Universidade Católica Campinas}\\[1.0cm] % Name of your university/college
 \textsc{\Large Engenharia de Computação}\\[0.5cm] % Major heading such as course name
 \textsc{\large Sistemas Operácionais B}\\[0.5cm] % Minor heading such as course title
 
@@ -67,23 +67,21 @@
 %	AUTHOR SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Author:}\\
-Bruno Camilo \textsc{Silvério}
-Guilherme \textsc{Pernicone}
-João Pedro \textsc{Porta}
-Marcelo Dib \textsc{Coutinho}
-Pedro Pierina \textsc{Pierina}
+Bruno Camilo \textsc{Silvério} ........................... RA: 16080293\\
+Guilherme Soderi \textsc{Pernicone}   ................. RA: 16085037\\
+João Pedro \textsc{Porta}      ................................... RA: 16039778\\
+Marcelo Dib \textsc{Coutinho}  ........................... RA: 16023673\\
+Pedro Garcia \textsc{Pierina} ............................. RA: 16136293\\
 \end{flushleft}
-\end{minipage}
 ~
-\begin{minipage}{0.4\textwidth}
-\begin{flushright} \large
+% \begin{minipage}{0.4\textwidth}
+\begin{center} \large
 \emph{Supervisor:} \\
-Ms. Prof. Edmar Roberto Santana de \textsc{Resende} % Supervisor's Name
-\end{flushright}
-\end{minipage}\\[2cm]
+Ms. Prof. Edmar Roberto Santana de \textsc{Resende}\\[1cm] % Supervisor's Name
+\end{center}
+% \end{minipage
 
 % If you don't want a supervisor, uncomment the two lines below and remove the section above
 %\Large \emph{Author:}\\
@@ -93,14 +91,13 @@ Ms. Prof. Edmar Roberto Santana de \textsc{Resende} % Supervisor's Name
 %	DATE SECTION
 %----------------------------------------------------------------------------------------
 
-{\large \today}\\[2cm] % Date, change the \today to a set date if you want to be precise
+ % Date, change the \today to a set date if you want to be precise
 
 %----------------------------------------------------------------------------------------
 %	LOGO SECTION
 %----------------------------------------------------------------------------------------
-
-\includegraphics[width=26mm]{logo.jpg}% Include a department/university logo - this will require the graphicx package
- 
+\includegraphics[width=26mm]{logo.jpg}\\[1cm]% Include a department/university logo - this will require the graphicx package
+{\large \today}\\[1cm]
 %----------------------------------------------------------------------------------------
 
 \vfill % Fill the rest of the page with whitespace
